검색 리팩토링